# swift-v5

./: Cargo.toml  README.md  TODO.md  dist-workspace.toml
.github/workflows/: release.yml
src/: build.rs  lib.rs  main.rs  project.rs  symlink.rs  toolchain.rs
src/toolchain/: extract.rs  install.rs
src/toolchain/extract/: macos.rs
